# LLM_REC

./: .gitignore  README.md  pyproject.toml
configs/: behavior_schema_aliases.yaml  mix_ratios_v1.yaml
configs/deepspeed/: zero2.json  zero3.json
configs/llamafactory/: dataset_info.json  lora_sft.yaml
configs/ms_swift/: README.md
data/samples/: sample_behavior.jsonl  sample_sft.jsonl
demo/: OFFICIAL_REVISION.md  convertv2_streaming.py
demo/config/: itemic_direct_pilot.yaml  itemic_enhanced_pilot.yaml  itemic_sid_only_pilot.yaml  server_a100.yaml  server_smoke.yaml
demo/scripts/: 03_train_server.sh  prepare_server_data.sh  register_server_dataset.py  setup_server.sh
docs/: COMPETITION_NOTES.md  ENV_SETUP.md  ITEMIC_EXPERIMENTS_20260702.md  MATERIAL_2EP_RUN.md  OFFICIAL_DATA_EDA.md  RUNBOOK.md  SERVER_CONFIG_AUDIT.md  TECH_ROUTE_REVIEW.md  TRAINING_MEMORY.md  TRAINING_RUN_20260701.md
models/: README.md
scripts/data/: build_history_sft.py  build_itemic_enhancement.py  build_staged_sft.py  cap_sft_length.py  check_format.py  extract_dataset.py  mix_datasets.py  parse_behavior.py  parse_sft.py  prepare_material_2ep.py  split_official.py
scripts/eda/: eda_report.py
scripts/eval/: assistant_teacher_forced.py  itemic_model_interpolate.py  itemic_row_restore.py  itemic_teacher_forced.py  local_eval.py
scripts/export/: export_llamafactory_lora.sh  export_swift_lora.sh  pre_submit_check.py
src/llmrec/: utils.py  (+11 more)
tests/: test_behavior_and_mix.py  test_data_schema.py  test_format_metrics.py  test_itemic_training.py  test_parse_sft.py  test_split_dataset.py
(+14 files in other folders)
